[package]
name = "fyrstikker"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.2"
rayon = "1.5.1"
rstest = "0.11.0"
mimalloc = { version = "0.1.26", default-features = false }
dashmap = { version = "4.0.2", features = ["rayon"] }
num-traits = "0.2.14"
parking_lot = "0.11.2"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = true
